<resources>
    <string name="app_name">NMedia</string>
    <string name="greeting">NMedia!</string>
    <string name="avatar_description">Author avatar</string>
    <string name="textPost"><![CDATA[Android data binding generates a Binding class
    based on this layout.
    This class holds all the bindings from the layout properties,
    i.e., the defined variable to the corresponding views.
    It also provides generated setters for your data elements from the layout.
    The name of the generated class is based on the name of the layout file.
    This name is converted to Pascal case and the Binding suffix is added to it.
   ]]></string>
    <string name="likesNumber" translatable="false">999</string>
    <string name="shareNumber" translatable="false">666666</string>
    <string name="viewsNumber" translatable="false">499999</string>
    <string name="AuthorName">Author</string>
    <string name="date" translatable="false">24.05.2022</string>
    <string name="remove">/Remove</string>
    <string name="edit">/Edit</string>
    <string name="post_text">Text Post</string>
    <string name="description">Description</string>
    <string name="write_your_text_here"> Write_your_text_here</string>
    <string name="EditImage" />
    <string name="edit_text"> Write_your_text_here</string>
    <string name="EditTextBottom">EditTextBottom </string>
    <string name="CancelEditButton">CancelTextBottom </string>
    <string name="EditTextTop" />
    <string name="options_button" />
    <string name="insert">/Insert</string>
    <string name="SaveButton">SaveButton</string>
    <string name="chooser_share_post" />

</resources>