<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/common_spacing">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/viewsNumber"
            android:layout_width="44dp"
            android:layout_height="33dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:text="@string/viewsNumber"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postText"
            tools:text="7999" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/views"
            android:layout_width="@dimen/common_size"
            android:layout_height="@dimen/common_size"
            android:layout_marginEnd="20dp"
            android:background="#FFFFFF"
            android:src="@drawable/ic_view_foreground_36"
            app:layout_constraintEnd_toStartOf="@+id/viewsNumber"
            app:layout_constraintTop_toBottomOf="@id/bottomBarrier"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/share"
            android:layout_width="@dimen/common_size"
            android:layout_height="@dimen/common_size"
            android:layout_marginStart="36dp"
            android:background="#FFFFFF"
            android:src="@drawable/ic_share_share_36"
            app:layout_constraintStart_toEndOf="@id/likesNumber"
            app:layout_constraintTop_toBottomOf="@id/bottomBarrier"
            tools:layout_editor_absoluteX="122dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/shareNumber"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/common_size"
            android:layout_marginStart="4dp"
            android:gravity="center"
            android:text="@string/shareNumber"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/share"
            app:layout_constraintTop_toBottomOf="@+id/postText"
            tools:text="888888" />

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/post_avatar_size"
            android:layout_height="@dimen/post_avatar_size"
            android:contentDescription="@string/avatar_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_foreground"
            tools:src="@tools:sample/avatars"
            tools:srcCompat="@drawable/ic_launcher_foreground" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/authorName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="24dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/AuthorName"
            android:textSize="14sp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@id/date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            app:layout_constraintTop_toTopOf="@+id/avatar"
            tools:text="Имя Автора поста" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/date"
            app:layout_constraintBottom_toBottomOf="@id/avatar"
            app:layout_constraintEnd_toStartOf="@id/options"
            app:layout_constraintStart_toStartOf="@id/authorName"
            app:layout_constraintTop_toBottomOf="@id/authorName"
            tools:text="24.05.2022" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_options_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/headerBarrier"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="avatar, date, date, options"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="64dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/postText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/textPost"
            app:barrierMargin="@dimen/common_size"
            app:layout_constraintBottom_toTopOf="@id/bottomBarrier"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headerBarrier" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/bottomBarrier"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="likesButton, likesNumber"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="329dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/likesNumber"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/common_size"
            android:layout_marginStart="4dp"
            android:gravity="center"
            android:text="@string/likesNumber"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/likesButton"
            app:layout_constraintTop_toBottomOf="@id/bottomBarrier"
            tools:text="111" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/likesButton"
            android:layout_width="@dimen/common_size"
            android:layout_height="@dimen/common_size"
            android:background="#FFFFFF"
            android:src="@drawable/ic_baseline_favorite_24"
            app:layout_constraintTop_toBottomOf="@id/bottomBarrier"
            tools:layout_editor_absoluteX="8dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>